--- a/css/cidu.css
+++ b/css/cidu.css
@@ -28,6 +28,7 @@ body {
 .header {
   font-family: "Noto Serif TC", serif;
   text-align: center;
+  margin: 0;
   padding: 3rem 1rem;
   font-size: 2rem;
   font-weight: bold;
@@ -135,8 +136,7 @@ button {
   color: #e25252;
 }
 .card-date {
-  min-width: 64px;
-  font-size: 0.75rem;
+  min-width: 76px;
   line-height: 1;
   padding: 2px 2px;
   color: #ff437b;
@@ -150,7 +150,6 @@ button {
 }
 .card-time {
   color: #404040;
-  line-height: 18px;
 }
 .card-content {
   font-size: 0.875rem;
